--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMusicApp"
         android:usesCleartextTraffic="true"
+        android:name=".playlist.PlaylistApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
